--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ development_workflow/bower_components
 development_workflow/node_modules
 1_getting_started/node_modules
 project1/node_modules
+project1-redux/node_modules
