Code Transpiling in the Browser with webpack fun

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ development_workflow/node_modules
 1_getting_started/node_modules
 project1/node_modules
 project1-redux/node_modules
+bundler/node_modules
