--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ development_workflow/node_modules
 project1/node_modules
 project1-redux/node_modules
 bundler/node_modules
+project-2-jbook/node_modules
